--- a/movienow-frontend/src/components/InputField.css
+++ b/movienow-frontend/src/components/InputField.css
@@ -90,3 +90,17 @@ label {
         background: transparent;
     }
 }
+
+/* Evita el fondo blanco del autocompletado */
+input:-webkit-autofill {
+    -webkit-box-shadow: 0 0 0 1000px transparent inset !important;
+    -webkit-text-fill-color: white !important;
+    transition: background-color 5000s ease-in-out 0s; /* truco para Chrome */
+}
+
+/* También para focus/hover */
+input:-webkit-autofill:focus,
+input:-webkit-autofill:hover {
+    -webkit-box-shadow: 0 0 0 1000px transparent inset !important;
+    -webkit-text-fill-color: white !important;
+}
