--- a/movienow-frontend/src/login/login.css
+++ b/movienow-frontend/src/login/login.css
@@ -160,3 +160,21 @@
     font-weight: 500;
     font-size: 22px;
 }
+
+.remember-section {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  margin-top: 0px;
+  margin-bottom: 10px;
+}
+
+.remember-label {
+  font-size: 1.0rem;
+  color: #ffffff; /* o el color que use tu formulario */
+  cursor: pointer;
+  font-family: 'DM Sans', sans-serif;
+  margin-top: 15px;
+  
+  
+}   
