--- a/movienow-frontend/src/login/login.css
+++ b/movienow-frontend/src/login/login.css
@@ -28,6 +28,7 @@
 .login-page > * {
     position: relative;
     z-index: 1;
+    
 }
 
 .logo-header {
@@ -79,7 +80,6 @@
     margin: 15px auto;
     padding: 27px 50px;
 }
-
 
 .login-title {
     text-align: center;
@@ -133,6 +133,7 @@
         margin: 0 auto;
         color: rgba(255, 255, 255, 0.68);
         font-weight: 200;
+        color: rgba(255, 255, 255, 0.68);
     }
 }
 
@@ -170,11 +171,10 @@
 }
 
 .remember-label {
-  font-size: 1.0rem;
-  color: #ffffff; /* o el color que use tu formulario */
-  cursor: pointer;
+  font-size: 1.1rem;
   font-family: 'DM Sans', sans-serif;
-  margin-top: 15px;
-  
-  
-}   
+  color: #ffffff;
+  margin-top: 20px;
+} 
+
+
