--- a/movienow-frontend/src/register/Register.css
+++ b/movienow-frontend/src/register/Register.css
@@ -183,6 +183,25 @@
 
 }
 
+.loading-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    backdrop-filter: blur(10px);
+    background: rgba(0, 0, 0, 0.5);
+    z-index: 9999;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.loader-container {
+    pointer-events: none;
+}
+
+
 
 
 
