--- a/movienow-frontend/src/login/Login.css
+++ b/movienow-frontend/src/login/Login.css
@@ -31,13 +31,15 @@
     
 }
 
-.logo-header {
+.logo-header-login {
     height: 30px;
     margin: 0;
     cursor: pointer;
     opacity: 0.85;
     &:hover {
         opacity: 1;
+        filter: drop-shadow(0 0 4px rgba(255, 255, 255, 0.6));
+
     }
 }
 
@@ -55,7 +57,22 @@
 
     &:hover {
         color: #ffffff;
+        text-shadow: 0 0 4px #ffffff;
     }
+}
+
+.login-line {
+    display: inline-flex;
+    align-items: center;
+    gap: 1px;
+}
+
+.text-register-header {
+
+    font-family: 'DM Sans', sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    color: rgb(163, 194, 227);
 }
 
 .login-header {
@@ -75,17 +92,17 @@
     align-content: center;
 }
 
-.form-container {
-    width: 450px;
+.form-container-login{
+    width: 550px;
     margin: 15px auto;
-    padding: 27px 50px;
+    padding: 40px 70px;
 }
 
 .login-title {
     text-align: center;
     color: white;
     margin-bottom: 0px;
-    margin-top: 5px;
+    margin-top: 0;
     font-family: 'DM sans', sans-serif;
     font-size: 26px;
     font-weight: 400;
@@ -99,7 +116,7 @@
 .login-slogan {
     text-align: center;
     color: #99aeda;
-    margin-bottom: 20px;
+    margin-bottom: 4px;
     font-family: 'DM sans', sans-serif;
     font-size: 20px;
     font-weight: 200;
@@ -111,6 +128,7 @@
     flex-direction: column;
     margin-left: 15px;
     margin-right: 15px;
+    margin-top: 20px;
 
     .group {
         margin-top: 12px;
@@ -145,13 +163,12 @@
     font-size: 16px;
 }
 
-.form-button {
+.form-button-login {
     margin-left: auto;
     margin-right: auto;
-    margin-top: 15px;
-
+    margin-top: 35px;
     position: relative;
-    width: 270px;
+    width: 350px;
     height: 55px;
     padding: 10px 10px;
     text-align: center;
@@ -173,6 +190,7 @@
 .remember-label {
   font-size: 1.1rem;
   font-family: 'DM Sans', sans-serif;
+  font-weight: 300;
   color: #ffffff;
   margin-top: 20px;
 } 
