--- a/movienow-frontend/src/editProfile/editProfile.css
+++ b/movienow-frontend/src/editProfile/editProfile.css
@@ -26,6 +26,18 @@
   z-index: 1;
 }
 
+.logo-header {
+    height: 30px;
+    margin: 0;
+    cursor: pointer;
+    opacity: 0.85;
+    &:hover {
+        opacity: 1;
+        filter: drop-shadow(0 0 4px rgba(255, 255, 255, 0.6));
+
+    }
+}
+
 .profile-header {
   display: flex;
   justify-content: space-between;
