--- a/movienow-frontend/src/editProfile/editProfile.css
+++ b/movienow-frontend/src/editProfile/editProfile.css
@@ -52,6 +52,14 @@
   transition: color 0.2s ease, transform 0.2s ease;
 }
 
+.star-icon {
+  width: 22px;
+  height: 22px;
+  color: GOLD;
+  transition: color 0.2s ease, transform 0.2s ease;
+}
+
+
 .back-button {
   font-family: "DM Sans", sans-serif;
   font-size: 18px;
