--- a/movienow-frontend/src/components/SearchBar/SearchBar.css
+++ b/movienow-frontend/src/components/SearchBar/SearchBar.css
@@ -42,7 +42,7 @@
 }
 
 /* Reutilizamos tu estilo base */
-.button-glass {
+.button-glass-s {
     background: linear-gradient(to bottom, rgba(0, 77, 191, 0.27), rgba(0, 74, 255, 0.24));
     border-radius: 50px;
     box-shadow: inset 4px 4px 10px rgba(39, 19, 97, 0.53), inset -4px -4px 10px rgba(157, 134, 221, 0.47), 0 0 15px rgba(0, 0, 0, 0.4);
@@ -53,21 +53,21 @@
     border: 2px solid rgb(60, 50, 83);
 }
 
-.button-glass:hover {
+.button-glass-s:hover {
     background: linear-gradient(to bottom, rgba(69, 108, 140, 0.27), rgba(25, 87, 246, 0.24));
 }
 
-.button-glass:focus {
+.button-glass-s:focus {
     outline: none;
     box-shadow: inset 4px 4px 10px rgba(39, 19, 97, 0.75), inset -4px -4px 10px rgba(157, 134, 221, 0.32), 0 0 15px rgba(0, 0, 0, 0.68);
     background: linear-gradient(to bottom, rgba(3, 55, 131, 0.27), rgba(2, 46, 156, 0.24));
 }
 
-.button-glass:active {
+.button-glass-s:active {
     transform: scale(0.96);
 }
 
-.button-glass::after {
+.button-glass-s::after {
     content: "";
     position: absolute;
     inset: 0;
